text align fix

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -147,10 +147,7 @@ img{
     background-color: #f7b5ae;
     color: white;
 }
-.main{
-    text-align: justify;
-    
-}
+
 .main p{
     line-height: 30px;
 }
